fix! color variables added

--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -1,3 +1,22 @@
 :root {
-  --color-blue: #044DC3;
+  --color-black: #000;
+  --color-white: #fff;
+  --color-white-dark: #f7f7f7;
+  --color-white-darker: #f2f2f2;
+  --color-light-gray: #e2e7e9;
+  --color-gray: #9B9B9B;
+  --color-dark-gray: #707070;
+  --color-darker-gray: #555555;
+  --color-blue-light: #edf1f2;
+  --color-pink-soft: #ffeae8;
+  --color-blue-soft: #e8f1ff;
+  --color-green-soft: #e2f7e1;
+  --color-red-soft: #e6e6e6;
+  --color-blue: #044dc3;
+  --color-green: #51B549;
+  --color-yellow: #ffce00;
+  --color-pinkish-orange: #ff5b4d;
+  --color-orange: #e64e41;
+  --color-pink: #f54257;
+  --color-maroon: #d01d32;
 }
